add_subdirectory(unity)
add_subdirectory(fixed_header)
add_subdirectory(variable_header)
add_subdirectory(mqtt_connect)
add_subdirectory(statemaschine)
add_subdirectory(socket_read_write_lib)
add_subdirectory(mvp)
add_subdirectory(prod)
add_subdirectory(cmdline)
add_subdirectory(empty)
add_subdirectory(help)
